# gpt-pilot

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml  on-push-any-branch.yaml  release-please.yaml
pilot/: __version__.py  app.py  db_init.py  main.py  settings.py  test_main_e2e.py
pilot/const/: common.py  convert_to_playground_convo.js  function_calls.py  ipc.py  llm.py
pilot/database/: database.py
pilot/database/connection/: postgres.py  sqlite.py
pilot/database/models/: app.py  architecture.py  command_runs.py  development.py  development_planning.py  development_steps.py  environment_setup.py  feature.py  file_snapshot.py  files.py  project_description.py  user.py  (+4 more)
pilot/helpers/: AgentConvo.py  Debugger.py  Project.py  cli.py  files.py  ipc.py  test_AgentConvo.py  test_Debugger.py  test_Project.py  test_cli.py  test_files.py
pilot/logger/: logger.py
pilot/prompts/: prompts.py  test_prompts.py
pilot/test/: test_colors.py  test_custom_open.py
pilot/utils/: arguments.py  custom_open.py  custom_print.py  dot_gpt_pilot.py  exit.py  files.py  function_calling.py  llm_connection.py  questionary.py  settings.py  style.py  telemetry.py  test_files.py  test_function_calling.py  test_llm_connection.py  utils.py
tests/: test_main_e2e.py
tests/database/: test_file_snapshot.py
tests/helpers/: test_Debugger.py  test_Project.py  test_cli.py  test_files_content.py
tests/utils/: test_arguments.py  test_files.py  test_function_calling.py  test_llm_connection.py  test_settings.py  test_utils.py
(+53 files in other folders)
