[tool.poetry]
name = "gpt-pilot"
version = "0.1.0"
authors = []
description = "Fork from https://github.com/Pythagora-io/gpt-pilot"
license = "MIT"
readme = "README.md"
packages = [{include = "pilot"}]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[ tool.poetry.scripts ]
gpt-pilot = "pilot.app:app"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
distro = "^1.8.0"
jsonschema = "^4.19.1"
Jinja2 = "^3.1.2"
peewee = "^3.16.2"
prompt-toolkit = "^3.0.39"
psutil = "^5.9.6"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
questionary = "^1.10.0"
requests = "^2.31.0"
tiktoken = "^0.4.0"
yaspin = "^2.4.0"
pydantic-settings = "^2.1.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
